# eleven

./: .gitignore  dummy_call_history.json  dummy_user_db.json  pyproject.toml  run_agent.py  setup.py  test_websocket.py
agents/: call.py  chat.py  match.py
elevenlabs-conversational-ai/: index.html  package-lock.json  package.json  script.js
server/accounts/: adapters.py  models.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py  0002_eleven.py  0003_alter_eleven_mood.py
server/agents/: match.py
server/backend/: asgi.py  settings.py  urls.py  views.py
server/calling/: consumers.py  routing.py  urls.py  views.py  websocket_audio_interface.py
server/templates/: base.html  index.html
server/templates/accounts/: eleven_setup.html  forms.html
server/templates/calling/: chatting.html  talk_to_eleven.html
server/templates/socialaccount/: login.html
server/type/: user_info.py
tests/: test_e2e.py
tests/test_agents/: test_chat.py
type/: user_info.py
utils/: utils_func.py
